# CyberMatchBot

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.dokploy.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: README.md  index.html  main.py  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
bot/: README.md  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 20260404_0007_chat_system.py  20260409_0009_user_presence_and_activity_reads.py  20260411_0011_user_gender.py
bot/app/bot/: factory.py
bot/app/config/: settings.py
bot/app/constants/: __init__.py  buttons.py  callbacks.py  image_ids.py  moderation.py
bot/app/database/: __init__.py  enums.py
bot/app/handlers/: __init__.py  admin.py  chats.py  context.py  fallback.py  group_guard.py  image_receiver.py  menu_sections.py  profile.py  profiles.py  search.py  start.py  states.py
bot/app/keyboards/: __init__.py  inline.py  main_menu.py
bot/app/locales/: __init__.py  en.json  manager.py  ru.json  uz.json
bot/app/middlewares/: db_session.py
bot/app/models/: user.py  user_message.py  user_stats.py
bot/app/repositories/: __init__.py  chats.py  interactions.py  profiles.py  users.py
bot/app/services/: action_logs.py  chats.py  interactions.py  messages.py  profiles.py  users.py
bot/app/utils/: game.py  validators.py
bot/app/web/: main.py
bot/cybermate_bot.egg-info/: SOURCES.txt  requires.txt
cybermate_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md
(+131 files in other folders)
