[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybermate-bot"
version = "0.1.0"
description = "CyberMate Telegram bot MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.13.1",
  "SQLAlchemy>=2.0.32,<3.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "alembic>=1.13.2,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
